# tsdataloader

./: README.md  pyproject.toml
notebook/: 1_postgres_dataloader.ipynb
src/tsdataloader/: __init__.py  dataloader.py  dataset.py
